Finish translating of the 'Built-in functions' section. #98

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -955,23 +955,27 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:617
 msgid "Built-in functions"
-msgstr ""
+msgstr "내장 함수"
 
 #: ../Doc/howto/functional.rst:619
 msgid "Let's look in more detail at built-in functions often used with iterators."
 msgstr ""
+"이터레이터에서 자주 사용되는 내장 함수를 자세히 살펴보겠습니다."
 
 #: ../Doc/howto/functional.rst:621
 msgid ""
 "Two of Python's built-in functions, :func:`map` and :func:`filter` "
 "duplicate the features of generator expressions:"
 msgstr ""
+"파이썬의 두 가지 내장 함수인 :func:`map` 와 :func:`filter` 는 제너레이터 표현식의 "
+"특징을 복제합니다."
 
 #: ../Doc/howto/functional.rst:633
 msgid ""
 ":func:`map(f, iterA, iterB, ...) <map>` returns an iterator over the "
 "sequence"
 msgstr ""
+":func:`map(f, iterA, iterB, ...) <map>` 은 시퀀스에 대한 이터레이터를 반환합니다."
 
 #: ../Doc/howto/functional.rst:625
 msgid ""
@@ -982,6 +986,7 @@ msgstr ""
 #: ../Doc/howto/functional.rst:635
 msgid "You can of course achieve the same effect with a list comprehension."
 msgstr ""
+"물론 리스트 컴프리헨션으로 같은 효과를 얻을 수 있습니다."
 
 #: ../Doc/howto/functional.rst:637
 msgid ""
@@ -991,10 +996,15 @@ msgid ""
 "returns the truth value of some condition; for use with :func:`filter`, "
 "the predicate must take a single value."
 msgstr ""
+":func:`filter(predicate, iter) <filter>` 는 특정 조건을 만족하는 모든 시퀀스 요소에 "
+"대한 이터레이터를 반환하며, 마찬가지로 리스트 컴프리헨션에 의해 복제됩니다. **술어** 는 어떤 "
+"조건의 진릿값을 반환하는 함수입니다. :func:`filter` 와 함께 사용하는 경우, 술어는 단일 값을 "
+"가져야 합니다."
 
 #: ../Doc/howto/functional.rst:650
 msgid "This can also be written as a list comprehension:"
 msgstr ""
+"또한 이것은 리스트 컴프리헨션으로 작성될 수 있습니다."
 
 #: ../Doc/howto/functional.rst:656
 msgid ""
@@ -1002,12 +1012,15 @@ msgid ""
 "the iterable returning 2-tuples containing the count (from *start*) and "
 "each element. ::"
 msgstr ""
+":func:`enumerate(iter, start=0) <enumerate>` 는 카운트(start부터)와 각 요소를 "
+"포함하는 2개의 요소로 구성된 튜플을 반환하는 이터러블의 요소를 계산합니다."
 
 #: ../Doc/howto/functional.rst:666
 msgid ""
 ":func:`enumerate` is often used when looping through a list and recording"
 " the indexes at which certain conditions are met::"
 msgstr ""
+":func:`enumerate` 는 리스트를 반복하고 특정 조건이 충족되는 인덱스를 기록할 때 자주 사용됩니다."
 
 #: ../Doc/howto/functional.rst:674
 msgid ""
@@ -1016,10 +1029,14 @@ msgid ""
 " sorted result.  The *key* and *reverse* arguments are passed through to "
 "the constructed list's :meth:`~list.sort` method. ::"
 msgstr ""
+":func:`sorted(iterable, key=None, reverse=False) <sorted>` 는 이터러블의 모든 "
+"요소를 리스트로 모으고, 리스트를 정렬하고, 정렬된 결과를 반환합니다. *key* 와 *reverse* "
+"인수는 생성된 리스트의 :meth:`~list.sort` 메서드로 전달됩니다."
 
 #: ../Doc/howto/functional.rst:689
 msgid "(For a more detailed discussion of sorting, see the :ref:`sortinghowto`.)"
 msgstr ""
+"정렬에 대한 자세한 설명은 :ref:`sortinghowto` 를 참고하세요."
 
 #: ../Doc/howto/functional.rst:692
 msgid ""
@@ -1028,12 +1045,17 @@ msgid ""
 "``True`` if any element in the iterable is a true value, and :func:`all` "
 "returns ``True`` if all of the elements are true values:"
 msgstr ""
+":func:`any(iter) <any>` 및 :func:`all(iter) <all>` 내장 함수는 반복 가능한 내용의 "
+"진릿값을 봅니다. :func:`any` 는 이터러블의 어떤 요소가 참이면 ``True`` 를 반환하고, "
+":func:`all` 은 모든 요소가 참이면 ``True`` 를 반환합니다."
 
 #: ../Doc/howto/functional.rst:711
 msgid ""
 ":func:`zip(iterA, iterB, ...) <zip>` takes one element from each iterable"
 " and returns them in a tuple::"
 msgstr ""
+":func:`zip(iterA, iterB, ...) <zip>` 은 각 이터러블에서 하나의 요소를 취하여 튜플로 "
+"반환합니다."
 
 #: ../Doc/howto/functional.rst:717
 msgid ""
@@ -1042,6 +1064,9 @@ msgid ""
 "only if they're requested.  (The technical term for this behaviour is "
 "`lazy evaluation <https://en.wikipedia.org/wiki/Lazy_evaluation>`__.)"
 msgstr ""
+"이 함수는 결과를 반환하기 전에 메모리 내의 리스트를 구성하거나 모든 입력 이터레이터를 처리하지 않습니다. "
+"대신 튜플은 요청된 경우에만 생성하여 반환합니다. (이 동작의 전문 용어는 "
+"`느긋한 계산법 <https://en.wikipedia.org/wiki/Lazy_evaluation>`__ 입니다.)"
 
 #: ../Doc/howto/functional.rst:722
 msgid ""
@@ -1049,6 +1074,8 @@ msgid ""
 "same length.  If the iterables are of different lengths, the resulting "
 "stream will be the same length as the shortest iterable. ::"
 msgstr ""
+"이 이터레이터는 모두 같은 길이의 이터러블과 함께 사용하기 위한 것입니다. 이터러블의 길이가 다른 "
+"경우 결과 스트림은 가장 짧은 이터러블과 같은 길이가 됩니다."
 
 #: ../Doc/howto/functional.rst:729
 msgid ""
@@ -1056,6 +1083,8 @@ msgid ""
 " the longer iterators and discarded.  This means you can't go on to use "
 "the iterators further because you risk skipping a discarded element."
 msgstr ""
+"더 긴 이터레이터에서 나머지 요소는 버려지기 때문에 이런 방식은 피해야 합니다. 즉, 삭제된 요소를 "
+"건너뛸 위험이 있으므로 이터레이터를 계속 사용할 수 없습니다."
 
 #: ../Doc/howto/functional.rst:735
 msgid "The itertools module"
