Add a missing double quotation mark. #98

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -1215,7 +1215,7 @@ msgid ""
 " <operator.attrgetter>` (returns a callable that fetches the ``.id`` "
 "attribute)."
 msgstr ""
-":mod:`operator` 모듈은 파이썬의 연산자에 대응하는 함수 집합을 포함합니다. 예를 들어 
+":mod:`operator` 모듈은 파이썬의 연산자에 대응하는 함수 집합을 포함합니다. 예를 들어 "
 ":func:`operator.add(a, b) <operator.add>` (두 개의 값을 더하기), "
 ":func:`operator.ne(a, b) <operator.ne>` (``a != b`` 와 동일) 및 "
 ":func:`operator.attrgetter('id') <operator.attrgetter>` "
