Finish translating of 'Combinatoric functions', 'Grouping elements' section in 'The itertools module'. #98

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -1283,7 +1283,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:882
 msgid "Combinatoric functions"
-msgstr ""
+msgstr "조합 함수"
 
 #: ../Doc/howto/functional.rst:884
 msgid ""
@@ -1291,6 +1291,8 @@ msgid ""
 "returns an iterator giving all possible *r*-tuple combinations of the "
 "elements contained in *iterable*.  ::"
 msgstr ""
+":func:`itertools.combinations(iterable, r) <itertools.combinations>` 는 "
+"*이터러블* 에 포함된 모든 요소의 가능한 *r*-튜플 조합을 제공하는 이터레이터를 반환합니다."
 
 #: ../Doc/howto/functional.rst:899
 msgid ""
@@ -1301,24 +1303,32 @@ msgid ""
 "<itertools.permutations>`, removes this constraint on the order, "
 "returning all possible arrangements of length *r*::"
 msgstr ""
+"각 튜플 내의 요소들은 *이터러블* 이 반환한 것과 같은 순서로 유지됩니다. 예를 들어 위의 예시에서 "
+"숫자 1은 항상 2, 3, 4 또는 5 앞에 옵니다. 비슷한 함수인 "
+":func:`itertools.permutations(iterable, r=None) <itertools.permutations>` "
+"은 제약 조건을 제거하여 길이 *r* 의 가능한 모든 배열을 반환합니다."
 
 #: ../Doc/howto/functional.rst:918
 msgid ""
 "If you don't supply a value for *r* the length of the iterable is used, "
 "meaning that all the elements are permuted."
 msgstr ""
+"*r* 에 값을 지정하지 않으면 이터러블의 길이가 사용됩니다. 즉, 모든 요소가 치환됩니다."
 
 #: ../Doc/howto/functional.rst:921
 msgid ""
 "Note that these functions produce all of the possible combinations by "
 "position and don't require that the contents of *iterable* are unique::"
 msgstr ""
+"이 함수는 위치별로 가능한 모든 조합을 생성하며 *이터러블* 의 내용이 고유해야 할 필요는 없습니다."
 
 #: ../Doc/howto/functional.rst:928
 msgid ""
 "The identical tuple ``('a', 'a', 'b')`` occurs twice, but the two 'a' "
 "strings came from different positions."
 msgstr ""
+"같은 튜플 ``('a', 'a', 'b')`` 가 두 번 발생하지만, 두 개의 'a' 문자열은 다른 위치에서 "
+"왔습니다."
 
 #: ../Doc/howto/functional.rst:931
 msgid ""
@@ -1328,10 +1338,14 @@ msgid ""
 " an element is selected for the first position of each tuple and then is "
 "replaced before the second element is selected.  ::"
 msgstr ""
+":func:`itertools.combinations_with_replacement(iterable, r) "
+"<itertools.combinations_with_replacement>` 함수는 다른 제약을 완화합니다. "
+"요소는 단일 튜플 내에서 반복될 수 있습니다. 개념적으로 요소는 각 튜플의 첫 번째 위치에 대해 "
+"선택되고 두 번째 요소가 선택되기 전에 대체됩니다."
 
 #: ../Doc/howto/functional.rst:946
 msgid "Grouping elements"
-msgstr ""
+msgstr "요소 그룹화"
 
 #: ../Doc/howto/functional.rst:948
 msgid ""
@@ -1341,6 +1355,9 @@ msgid ""
 "element returned by the iterable.  If you don't supply a key function, "
 "the key is simply each element itself."
 msgstr ""
+"마지막으로 소개할 :func:`itertools.groupby(iter, key_func=None) <itertools.groupby>` "
+"함수는 가장 복잡합니다. ``key_func(elem)`` 는 이터러블에 의해 반환된 각 요소에 대한 키값을 "
+"계산할 수 있는 함수입니다. 키 함수를 제공하지 않으면 키는 단순히 각 요소 자체입니다."
 
 #: ../Doc/howto/functional.rst:953
 msgid ""
@@ -1349,6 +1366,8 @@ msgid ""
 "of 2-tuples containing a key value and an iterator for the elements with "
 "that key."
 msgstr ""
+":func:`~itertools.groupby` 는 키값이 같은 기본 이터러블에서 연속된 모든 요소를 수집하여 "
+"키값과 해당 키를 가진 요소의 이터러블을 포함하는 2-튜플의 스트림을 반환합니다."
 
 #: ../Doc/howto/functional.rst:981
 msgid ""
@@ -1358,6 +1377,9 @@ msgid ""
 "results of iterator-1 before requesting iterator-2 and its corresponding "
 "key."
 msgstr ""
+":func:`~itertools.groupby` 는 기본적인 이터러블 내용이 키에 따라 이미 정렬되었다고 가정합니다. "
+"반환된 이터레이터 역시 기본적인 이터러블을 사용하므로 이터레이터-2와 해당 키를 요청하기 전에 "
+"이터레이터-1의 결과를 사용해야 합니다."
 
 #: ../Doc/howto/functional.rst:988
 msgid "The functools module"
