Finish translating of 'The operator module' section. #98

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -1482,7 +1482,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:1079
 msgid "The operator module"
-msgstr ""
+msgstr "연산자 모듈"
 
 #: ../Doc/howto/functional.rst:1081
 msgid ""
@@ -1491,38 +1491,49 @@ msgid ""
 " useful in functional-style code because they save you from writing "
 "trivial functions that perform a single operation."
 msgstr ""
+":mod:`operator` 모듈은 이전에 언급되었습니다. 여기에는 파이썬 연산자에 해당하는 함수 집합이 "
+"포함되어 있습니다. 단일 작업을 수행하는 사소한 함수를 작성하지 않아도 되므로 이러한 함수는 "
+"함수형 방식 코드에서 유용합니다."
 
 #: ../Doc/howto/functional.rst:1086
 msgid "Some of the functions in this module are:"
 msgstr ""
+"이 모듈의 몇몇 함수는 다음과 같습니다."
 
 #: ../Doc/howto/functional.rst:1088
 msgid ""
 "Math operations: ``add()``, ``sub()``, ``mul()``, ``floordiv()``, "
 "``abs()``, ..."
 msgstr ""
+"수학 연산: ``add()``, ``sub()``, ``mul()``, ``floordiv()``, "
+"``abs()``, ..."
 
 #: ../Doc/howto/functional.rst:1089
 msgid "Logical operations: ``not_()``, ``truth()``."
 msgstr ""
+"논리 연산: ``not_()``, ``truth()``."
 
 #: ../Doc/howto/functional.rst:1090
 msgid "Bitwise operations: ``and_()``, ``or_()``, ``invert()``."
 msgstr ""
+"비트 연산: ``and_()``, ``or_()``, ``invert()``."
 
 #: ../Doc/howto/functional.rst:1091
 msgid ""
 "Comparisons: ``eq()``, ``ne()``, ``lt()``, ``le()``, ``gt()``, and "
 "``ge()``."
 msgstr ""
+"비교: ``eq()``, ``ne()``, ``lt()``, ``le()``, ``gt()``, ``ge()``."
 
 #: ../Doc/howto/functional.rst:1092
 msgid "Object identity: ``is_()``, ``is_not()``."
 msgstr ""
+"객체 동일성: ``is_()``, ``is_not()``."
 
 #: ../Doc/howto/functional.rst:1094
 msgid "Consult the operator module's documentation for a complete list."
 msgstr ""
+"전체 목록은 연산자 모듈의 문서를 참고하세요."
 
 #: ../Doc/howto/functional.rst:1098
 msgid "Small functions and the lambda expression"
