Finish translating of 'Revision History and Acknowledgements' and 'References' section. #98

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -723,7 +723,7 @@ msgid ""
 "compiles the function specially as a result."
 msgstr ""
 ":keyword:`yield` 키워드를 포함하는 함수는 제너레이터 함수입니다. 이것은 파이썬의 "
-":term:`bytecode` 컴파일러에 의해 감지됩니다. 이 컴파일러는 결과를 함수로 컴파일합니다."
+":term:`바이트코드 <bytecode>` 컴파일러에 의해 감지됩니다. 이 컴파일러는 결과를 함수로 컴파일합니다."
 
 #: ../Doc/howto/functional.rst:455
 msgid ""
@@ -1669,7 +1669,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:1177
 msgid "Revision History and Acknowledgements"
-msgstr ""
+msgstr "개정내역 및 감사의 글"
 
 #: ../Doc/howto/functional.rst:1179
 msgid ""
@@ -1679,24 +1679,29 @@ msgid ""
 "Jewett, Mike Krell, Leandro Lameiro, Jussi Salmela, Collin Winter, Blake "
 "Winton."
 msgstr ""
+"필자는 이 글의 다양한 초안을 제안하고 수정하고 도와준 다음 사람들에게 감사하고 싶습니다. "
+"Ian Bicking, Nick Coghlan, Nick Efford, Raymond Hettinger, Jim Jewett, "
+"Mike Krell, Leandro Lameiro, Jussi Salmela, Collin Winter, Blake Winton."
 
 #: ../Doc/howto/functional.rst:1184
 msgid "Version 0.1: posted June 30 2006."
-msgstr ""
+msgstr "버전 0.1: 2006년 6월 30일 게시."
 
 #: ../Doc/howto/functional.rst:1186
 msgid "Version 0.11: posted July 1 2006.  Typo fixes."
-msgstr ""
+msgstr "버전 0.11: 2006년 7월 1일 게시. 오타 수정."
 
 #: ../Doc/howto/functional.rst:1188
 msgid ""
 "Version 0.2: posted July 10 2006.  Merged genexp and listcomp sections "
 "into one. Typo fixes."
 msgstr ""
+"버전 0.2: 2006년 7월 10일 게시. 제너레이터 표현식과 리스트 컴프리헨션 섹션을 하나로 통합. 오타 수정."
 
 #: ../Doc/howto/functional.rst:1191
 msgid "Version 0.21: Added more references suggested on the tutor mailing list."
 msgstr ""
+"버전 0.21: 튜터 메일링 리스트에서 추천된 참고 문헌을 추가."
 
 #: ../Doc/howto/functional.rst:1193
 msgid ""
@@ -1704,14 +1709,16 @@ msgid ""
 "Collin Winter; adds short section on the operator module; a few other "
 "edits."
 msgstr ""
+"버전 0.30: Collin Winter가 작성한 ``functional`` 모듈에 섹션 추가. 연산자 모듈에 짧은 "
+"섹션 추가. 몇 가지 다른 편집."
 
 #: ../Doc/howto/functional.rst:1198
 msgid "References"
-msgstr ""
+msgstr "참고 문헌"
 
 #: ../Doc/howto/functional.rst:1201
 msgid "General"
-msgstr ""
+msgstr "일반"
 
 #: ../Doc/howto/functional.rst:1203
 msgid ""
@@ -1723,6 +1730,11 @@ msgid ""
 "examples, but many of the design approaches described in these chapters "
 "are applicable to functional-style Python code."
 msgstr ""
+"Harold Abelson과 Gerald Jay Sussman, Julie Sussman의 컴퓨터 프로그램 구조와 해석. "
+"전체 문서는 https://mitpress.mit.edu/sicp/ 에 있습니다. 이 고전적인 컴퓨터 과학 "
+"교과서에서 2장과 3장은 프로그램 내에서 데이터 흐름을 구성하기 위해 시퀀스와 스트림을 사용하는 "
+"방법을 설명합니다. 이 책은 스킴(Scheme)을 예제로 사용하지만, 이 장에서 설명한 디자인 방식 중 "
+"상당수는 함수형 방식 파이썬 코드에 적용할 수 있습니다."
 
 #: ../Doc/howto/functional.rst:1211
 msgid ""
@@ -1730,24 +1742,30 @@ msgid ""
 "functional programming that uses Java examples and has a lengthy "
 "historical introduction."
 msgstr ""
+"http://www.defmacro.org/ramblings/fp.html: 오랜 역사적 소개와 함께 자바 예제를 "
+"사용한 함수형 프로그래밍에 대한 일반적인 개론."
 
 #: ../Doc/howto/functional.rst:1214
 msgid ""
 "https://en.wikipedia.org/wiki/Functional_programming: General Wikipedia "
 "entry describing functional programming."
 msgstr ""
+"https://en.wikipedia.org/wiki/Functional_programming: 함수형 프로그래밍을 "
+"설명하는 일반 위키피디아 항목."
 
 #: ../Doc/howto/functional.rst:1217
 msgid "https://en.wikipedia.org/wiki/Coroutine: Entry for coroutines."
 msgstr ""
+"https://en.wikipedia.org/wiki/Coroutine: 코루틴에 대한 항목."
 
 #: ../Doc/howto/functional.rst:1219
 msgid "https://en.wikipedia.org/wiki/Currying: Entry for the concept of currying."
 msgstr ""
+"https://en.wikipedia.org/wiki/Currying: 커링 개념에 대한 항목."
 
 #: ../Doc/howto/functional.rst:1222
 msgid "Python-specific"
-msgstr ""
+msgstr "파이썬 특정"
 
 #: ../Doc/howto/functional.rst:1224
 msgid ""
@@ -1756,6 +1774,9 @@ msgid ""
 "for text processing, in the section titled \"Utilizing Higher-Order "
 "Functions in Text Processing\"."
 msgstr ""
+"http://gnosis.cx/TPiP/: David Mertz의 책 :title-reference:`Text Processing in Python` "
+"의 첫 번째 장에서는 \"텍스트 처리에서 고차 함수 활용\" 절에서 텍스트 처리를 위한 함수형 프로그래밍에 "
+"관해 설명합니다."
 
 #: ../Doc/howto/functional.rst:1229
 msgid ""
@@ -1767,30 +1788,38 @@ msgid ""
 " and `part 3 "
 "<https://www.ibm.com/developerworks/linux/library/l-prog3/index.html>`__,"
 msgstr ""
+"Mertz는 또한 IBM의 DeveloperWorks 사이트에서 함수형 프로그래밍 기사 시리즈 3부작을 작성했습니다. `part 1 "
+"<https://www.ibm.com/developerworks/linux/library/l-prog/index.html>`__, "
+"`part 2 "
+"<https://www.ibm.com/developerworks/linux/library/l-prog2/index.html>`__, "
+"`part 3 "
+"<https://www.ibm.com/developerworks/linux/library/l-prog3/index.html>`__,"
 
 #: ../Doc/howto/functional.rst:1237
 msgid "Python documentation"
-msgstr ""
+msgstr "파이썬 문서"
 
 #: ../Doc/howto/functional.rst:1239
 msgid "Documentation for the :mod:`itertools` module."
-msgstr ""
+msgstr ":mod:`itertools` 모듈에 대한 문서"
 
 #: ../Doc/howto/functional.rst:1241
 msgid "Documentation for the :mod:`functools` module."
-msgstr ""
+msgstr ":mod:`functools` 모듈에 대한 문서"
 
 #: ../Doc/howto/functional.rst:1243
 msgid "Documentation for the :mod:`operator` module."
-msgstr ""
+msgstr ":mod:`operator` 모듈에 대한 문서"
 
 #: ../Doc/howto/functional.rst:1245
 msgid ":pep:`289`: \"Generator Expressions\""
-msgstr ""
+msgstr ":pep:`289`: \"제너레이터 표현식\""
 
 #: ../Doc/howto/functional.rst:1247
 msgid ""
 ":pep:`342`: \"Coroutines via Enhanced Generators\" describes the new "
 "generator features in Python 2.5."
 msgstr ""
+":pep:`342`: \"강화된 제너레이터를 통한 코루틴\" 은 파이썬 2.5의 새로운 제너레이터 "
+"기능을 설명합니다."
 
